--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
       <artifactId>zookeeper</artifactId>
       <version>3.4.6</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 </project>
